# AMM-netting-inspired-protocol

./: CHANGELOG.md  README.md  amm-netting.cabal  thesis.cabal
app/: Main.hs
lib/: Sem.hs  Util.hs
lib/Netting/: AmmFuns.hs  Funcs.hs  Sem.hs  Sim.hs  Worth.hs
smt/: amm-netting.smt2
tests/: Test.hs
tests/Examples/: Example1.hs  Example2.hs  Example3.hs  Example4.hs  Example5.hs  Example6.hs  IntroductionExample.hs
