cabal-version:      2.4
name:               amm-netting
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
library netting-lib
    exposed-modules: Netting.AmmFuns,
                     Netting.Sem,
                     Netting.Sim,
                     Netting.Worth
    build-depends: base,
                   containers,
                   random
    hs-source-dirs: lib
    default-language: Haskell2010

extra-source-files: CHANGELOG.md

executable amm-netting
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.18.0.0 && <= 4.20.0.0, 
                      netting-lib,
                      containers
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite tests
    type: exitcode-stdio-1.0
    main-is: Test.hs
    other-modules: Examples.Example1,
                   Examples.Example2,
                   Examples.Example3,
                   Examples.Example4,
                   Examples.Example5,
                   Examples.Example6
    build-depends: base, 
                   tasty, 
                   tasty-hunit, 
                   netting-lib,
                   containers
    hs-source-dirs: tests
    default-language: Haskell2010